RavenDB-11081 Allow to get the physical size of a document

--- a/src/Raven.Studio/wwwroot/Content/css/pages/documents-edit.less
+++ b/src/Raven.Studio/wwwroot/Content/css/pages/documents-edit.less
@@ -137,6 +137,12 @@
         font-size: 10px;
         align-self: baseline;
     }
+
+    .black-tooltip {
+        .tooltip-inner {
+            max-width: 100%;
+        }
+    }
 }
 
 .virtual-row {
