--- a/src/Raven.Studio/wwwroot/App/views/database/documents/editDocument.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/documents/editDocument.html
@@ -1,5 +1,4 @@
 <form data-bind="submit: saveDocument" class="editDocument" autocomplete="off">
-
     <div class="docEditor flex-window flex-grow content-margin">
         <div class="flex-window-head">
             <div class="row">
@@ -92,37 +91,47 @@
             <div class="absolute-fill" data-bind="visible: isDeleteRevision()">
                 <div class="absolute-center padding bg-info text-center">
                     <i class="icon-trash icon-xl"></i>
-
                     This document was removed on <span data-bind="text: metadata().lastModifiedFullDate"></span>.
                     <br />
                     Go to <a href="#" class="text-revisions" data-bind="click: _.partial(connectedDocuments.activateRevisions, true)">REVISIONS</a> to see entire document history.
                 </div>
-
             </div>
         </div>
         <div data-bind="validationOptions: { errorsAsTitle: false }, validationElement: documentText">
             <div class="help-block" data-bind="validationMessage: documentText"></div>
         </div>
-
     </div>
     <div id="right-options-panel" class="flex-window">
         <div class="panel flex-window-head">
             <div class="panel-body">
                 <h3 class="margin-none">Properties</h3>
                 <hr class="small" />
-                <dl class="dl-horizontal small" data-bind="with: metadata">
+                <dl class="dl-horizontal small black-tooltip" data-bind="with: metadata">
                     <div data-bind="visible: !$root.isCreatingNewDocument()">
                         <dt>Change Vector:</dt>
                         <dd>
-                            <span data-bind="foreach: $root.changeVector">
-                                <span class="badge badge-default" data-bind="text: shortFormat, attr: { title: fullFormat }"></span>
-                            </span>
+                            <span class="toggle" data-placement="bottom" data-toggle="tooltip" data-html="true" data-animation="true"
+                                  data-bind="attr: { 'data-original-title': $root.changeVectorHtml() }">
+                                    <span data-bind="foreach: $root.changeVector">
+                                        <span class="badge badge-default" data-bind="text: shortFormat"></span>
+                                    </span> <!-- todo: why tooltip disappears between lines ?  -->
+                             </span>
                         </dd>
                         <dt>Modified:</dt>
-                        <dd data-bind="text: lastModifiedInterval, attr: { title: lastModifiedFullDate }"></dd>
+                        <dd>
+                            <span class="toggle" data-placement="bottom" data-toggle="tooltip" data-html="true" data-animation="true"
+                                  data-bind="attr: { 'data-original-title': '<h4>Last Modified Time</h4>' + lastModifiedFullDate() }">
+                                <span data-bind="text: lastModifiedInterval"></span>
+                            </span>
+                        </dd>
                     </div>
                     <dt>Size:</dt>
-                    <dd><span data-bind="text: $root.documentSize() , attr: { title: $root.documentSize() }"></span> KB</dd>
+                    <dd>
+                        <span class="toggle" data-placement="bottom" data-toggle="tooltip" data-html="true" data-animation="true"
+                             data-bind="attr: { 'data-original-title': $root.documentSizeHtml() }">
+                            <span data-bind="text: $root.computedDocumentSize()"></span> KB
+                        </span>
+                    </dd>
                 </dl>
             </div>
         </div>
