--- a/src/Raven.Studio/wwwroot/App/views/database/tasks/editExternalReplicationTask.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/tasks/editExternalReplicationTask.html
@@ -19,9 +19,9 @@
                                 <input type="text" class="form-control" data-bind="textInput: taskName" id="taskName" autocomplete="off" placeholder="Enter a descriptive name for the replication task (optional)">
                             </div>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group black-tooltip">
                             <label class="control-label">&nbsp;</label>
-                            <div class="toggle" data-placement="left" data-toggle="tooltip" title="Set a delay time for the task">
+                            <div class="toggle" data-placement="left" data-toggle="tooltip" title="Set a delay time for the task" data-animation="true">
                                 <input id="setDelayTime" type="checkbox" data-bind="checked: showDelayReplication">
                                 <label for="setDelayTime">Set Replication Delay Time</label>
                             </div>
@@ -43,9 +43,9 @@
                                 <div data-bind="html: humaneDelayDescription"></div>
                             </div>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group black-tooltip">
                             <label class="control-label">&nbsp;</label>
-                            <div class="toggle" data-placement="left" data-toggle="tooltip" title="Mentor node is responsible for the ongoing task">
+                            <div class="toggle" data-placement="left" data-toggle="tooltip" title="Mentor node is responsible for the ongoing task" data-animation="true">
                                 <input id="manualMentorNode" type="checkbox" data-bind="checked: manualChooseMentor">
                                 <label for="manualMentorNode">Choose preferred mentor node manually</label>
                             </div>
