RavenDB-8993 Expose index explain in the studio

--- a/src/Raven.Studio/wwwroot/Content/css/modals.less
+++ b/src/Raven.Studio/wwwroot/Content/css/modals.less
@@ -307,6 +307,7 @@
             line-height: 27px;
             color: @brand-primary;
             font-weight: bold;
+            word-wrap: break-word;
         }
     }
 }
