--- a/src/Raven.Studio/wwwroot/Content/css/styles.less
+++ b/src/Raven.Studio/wwwroot/Content/css/styles.less
@@ -1796,7 +1796,7 @@ ul.properties {
     margin: 0;
 }
 
-.black-tooltip {
+.tooltip {
     .tooltip-inner {
         min-width: @tooltip-inner-min-width;
         max-width: @tooltip-inner-max-width;
