--- a/src/Raven.Studio/wwwroot/App/views/database/tasks/editExternalReplicationTask.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/tasks/editExternalReplicationTask.html
@@ -19,7 +19,7 @@
                                 <input type="text" class="form-control" data-bind="textInput: taskName" id="taskName" autocomplete="off" placeholder="Enter a descriptive name for the replication task (optional)">
                             </div>
                         </div>
-                        <div class="form-group black-tooltip">
+                        <div class="form-group">
                             <label class="control-label">&nbsp;</label>
                             <div class="toggle" data-placement="left" data-toggle="tooltip" title="Set a delay time for the task" data-animation="true">
                                 <input id="setDelayTime" type="checkbox" data-bind="checked: showDelayReplication">
@@ -43,7 +43,7 @@
                                 <div data-bind="html: humaneDelayDescription"></div>
                             </div>
                         </div>
-                        <div class="form-group black-tooltip">
+                        <div class="form-group">
                             <label class="control-label">&nbsp;</label>
                             <div class="toggle" data-placement="left" data-toggle="tooltip" title="Mentor node is responsible for the ongoing task" data-animation="true">
                                 <input id="manualMentorNode" type="checkbox" data-bind="checked: manualChooseMentor">
