--- a/src/Raven.Studio/wwwroot/App/views/database/tasks/editPeriodicBackupTask.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/tasks/editPeriodicBackupTask.html
@@ -31,7 +31,7 @@
                     <span class="help-block" data-bind="validationMessage: backupType"></span>
                 </div>
             </div>
-            <div class="row flex-row margin-bottom black-tooltip">
+            <div class="row flex-row margin-bottom">
                 <div class="col-sm-4 col-lg-4 col-sm-offset-4 col-lg-offset-2">
                     <div class="toggle" data-placement="top" data-toggle="tooltip" title="Mentor node is responsible for the ongoing task" data-animation="true">
                         <input id="toggle3" type="checkbox" data-bind="checked: manualChooseMentor">
