--- a/src/Raven.Studio/wwwroot/App/views/database/tasks/editSqlEtlTask.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/tasks/editSqlEtlTask.html
@@ -37,7 +37,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            <div class="form-group black-tooltip">
+                            <div class="form-group">
                                 <label class="control-label">&nbsp;</label>
                                 <div class="toggle" data-placement="left" data-toggle="tooltip" title="Mentor node is responsible for the ongoing task" data-animation="true">
                                     <input id="manualMentorSelection" type="checkbox" data-bind="checked: manualChooseMentor">
