--- a/src/Raven.Studio/wwwroot/App/views/database/tasks/editSubscriptionTask.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/tasks/editSubscriptionTask.html
@@ -87,7 +87,7 @@
                                     <span class="help-block" data-bind="validationMessage: startingChangeVector"></span>
                                 </div>
                             </div>
-                            <div class="form-group black-tooltip">
+                            <div class="form-group">
                                 <div class="toggle" data-placement="right" data-toggle="tooltip" title="Mentor node is responsible for the ongoing task" data-animation="true">
                                     <input id="toggle3" type="checkbox" data-bind="checked: manualChooseMentor">
                                     <label for="toggle3">Choose a preferred mentor node manually</label>
