--- a/src/Raven.Studio/wwwroot/Content/css/pages/documents-edit.less
+++ b/src/Raven.Studio/wwwroot/Content/css/pages/documents-edit.less
@@ -138,7 +138,7 @@
         align-self: baseline;
     }
 
-    .black-tooltip {
+    .tooltip {  
         .tooltip-inner {
             max-width: 100%;
         }
