--- a/src/Raven.Studio/wwwroot/Content/css/pages/sql-migration.less
+++ b/src/Raven.Studio/wwwroot/Content/css/pages/sql-migration.less
@@ -29,6 +29,11 @@
 }
 
 .sql-migration {
+    
+    .suffix-input {
+        width: 100px;
+        display: inline-block;
+    }
 
     .exit-button {
         display: none;
