--- a/src/Raven.Studio/wwwroot/Content/css/pages/sql-migration.less
+++ b/src/Raven.Studio/wwwroot/Content/css/pages/sql-migration.less
@@ -199,7 +199,7 @@
             }
         }
         
-        &:hover:not(.edit-mode) {
+        &:hover:not(.edit-mode):not(.edit-disabled) {
             padding-right: 4px;
             border: solid 1px @gray;
             border-right: solid 22px @gray;
