--- a/src/Raven.Studio/wwwroot/App/views/database/tasks/importDatabaseFromSql.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/tasks/importDatabaseFromSql.html
@@ -65,8 +65,8 @@
                                 </div>
                             </div>
 
-                            <div class="form-group row">
-                                <div class="col-sm-10">
+                            <div class="form-group flex-horizontal">
+                                <div>
                                      <button class="btn btn-default" type="button"
                                             data-bind="click: $root.showAdvancedOptions.toggle.bind($root.showAdvancedOptions)">
                                         Advanced
@@ -74,6 +74,14 @@
                                     <button class="btn btn-primary" type="submit"
                                             data-bind="disable: $root.spinners.schema, css: { 'btn-spinner': $root.spinners.schema }">
                                         <span class="icon-import"></span> <span>Create new import</span>
+                                    </button>
+                                </div>
+                                <div class="flex-separator"></div>
+                                <div>
+                                    <button class="btn btn-default btn-info" title="Test the connection string connection"
+                                            data-bind="click: $root.testConnection, disable: $root.spinners.testConnection(), css: { 'btn-spinner': $root.spinners.testConnection }">
+                                        <i class="icon-rocket"></i>
+                                        <span>Test Connection</span>
                                     </button>
                                 </div>
                             </div>
@@ -106,6 +114,22 @@
                                 </div>
                             </div>
                         </div>
+
+                        <div data-bind="with: testConnectionResult">
+                            <div class="padding bg-success small" data-bind="visible: Success">
+                                <div>Successfully connected to the server</div>
+                            </div>
+                            <div class="padding bg-danger small"
+                                 data-bind="visible: !Success">
+                                Connection test failed: <span data-bind="text: $root.fullErrorDetailsVisible() ? Error : $root.shortErrorText()"></span>
+                                <div>
+                                    <a href="#"
+                                       data-bind="click: $root.fullErrorDetailsVisible.toggle.bind($root.fullErrorDetailsVisible), text: $root.fullErrorDetailsVisible() ? 'hide details' : 'show details'">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        
                     </div>
                     <div class="col-lg-6">
                         <h4>Continue existing migration</h4>
