--- a/src/Raven.Studio/wwwroot/App/views/notifications/notificationCenter.html
+++ b/src/Raven.Studio/wwwroot/App/views/notifications/notificationCenter.html
@@ -41,7 +41,7 @@
                     <i class="icon-cancel"></i>
                 </button>
                 <div class="notification-header">
-                    <i class="icon-global-cutout icon-addon-danger"></i>
+                    <i data-bind="attr: { 'class': headerIconClass() + ' ' +  headerIconAddonClass() } "></i>
                     <h3 data-bind="text: title"></h3>
                 </div>
                 <div class="time" data-bind="text: displayDate().format('LLL')"></div>
@@ -97,7 +97,7 @@
                 <i class="icon-cancel"></i>
             </button>
             <div class="notification-header">
-                <i class="icon-global-cutout icon-addon-danger"></i>
+                <i data-bind="attr: { class: headerIconClass() + ' icon-addon-warning' }"></i>
                 <h3 data-bind="text: title"></h3>
             </div>
             <div class="time" data-bind="text: displayDate().format('LLL')"></div>
@@ -132,7 +132,7 @@
                 <i class="icon-cancel"></i>
             </button>
             <div class="notification-header">
-                <i class="icon-global-cutout icon-addon-warning"></i>
+                <i data-bind="attr: { class: headerIconClass() + ' icon-addon-danger' }"></i>
                 <h3 data-bind="text: title"></h3>
             </div>
             <div class="time" data-bind="text: displayDate().format('LLL')"></div>
@@ -153,7 +153,7 @@
                 <i class="icon-cancel"></i>
             </button>
             <div class="notification-header">
-                <i class="icon-global-cutout icon-addon-danger"></i>
+                <i data-bind="attr: { class: headerIconClass() + ' icon-addon-rocket' }"></i>
                 <h3 data-bind="text: title"></h3>
             </div>
             <div class="time" data-bind="text: displayDate().format('LLL')"></div>
