RavenDB-8647 SQL Migration style adjustments

--- a/src/Raven.Studio/wwwroot/Content/css/icons.less
+++ b/src/Raven.Studio/wwwroot/Content/css/icons.less
@@ -71,6 +71,14 @@
     }
 }
 
+.icon-embed:before {
+    content: "\e9ff";
+}
+
+.icon-skip:before {
+    content: "\ea00";
+}
+
 .icon-sql-attachment:before {
   content: "\e9eb";
 }
